// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pattern-rule-field Renders \`pattern-rule-field\` with custom props 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="layout gap-3"
  >
    <div
      class="flex xs5"
    >
      <div
        class="layout gap-3"
      >
        <div
          class="flex xs4"
        >
          <pattern-attribute-field-stub
            disabled="true"
            items="[object Object]"
            label=""
            name="customName"
            required="true"
            returnobject="true"
            value="v.display_name"
          />
        </div>
        <div
          class="flex xs8"
        >
          <c-infos-attribute-field-stub
            combobox="true"
            disabled="true"
            items="Infos 1,Infos 2"
            name="customName"
            row=""
            value="[object Object]"
          />
        </div>
      </div>
    </div>
    <div
      class="flex xs7"
    >
      <div
        class="layout gap-3"
      >
        <div
          class="flex xs1"
        >
          <c-input-type-field-stub
            disabled="true"
            label="Type"
            name="customName"
            types="[object Object],[object Object]"
          />
        </div>
        <div
          class="flex xs4"
        >
          <pattern-operator-field-stub
            disabled="true"
            label=""
            name="customName.operator"
            operators="not_equal,equal"
            required="true"
            value="equal"
          />
        </div>
        <div
          class="flex xs7"
        >
          <custom-component-stub
            disabled="true"
            label="Value"
            name="test name"
            required="true"
            value="ruleValue"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <!---->
  </div>
</div>
`;

exports[`pattern-rule-field Renders \`pattern-rule-field\` with date type 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="layout gap-3"
  >
    <div
      class="flex xs4"
    >
      <div
        class="layout gap-3"
      >
        <div
          class="flex"
        >
          <pattern-attribute-field-stub
            items=""
            label=""
            name="rule"
            required="true"
            returnobject="true"
            value="v.creation_date"
          />
        </div>
        <!---->
      </div>
    </div>
    <div
      class="flex xs8"
    >
      <div
        class="layout gap-3"
      >
        <!---->
        <div
          class="flex xs5"
        >
          <pattern-operator-field-stub
            label=""
            name="rule.operator"
            operators=""
            required="true"
            value="in_range_dates"
          />
        </div>
        <div
          class="flex xs7"
        >
          <pattern-rule-field-date-value-stub
            intervalranges="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
            name="rule.value"
            operator="in_range_dates"
            value="[object Object]"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <!---->
  </div>
</div>
`;

exports[`pattern-rule-field Renders \`pattern-rule-field\` with default props 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="layout gap-3"
  >
    <div
      class="flex xs4"
    >
      <div
        class="layout gap-3"
      >
        <div
          class="flex"
        >
          <pattern-attribute-field-stub
            items=""
            label=""
            name="rule"
            required="true"
            returnobject="true"
            value="v.display_name"
          />
        </div>
        <!---->
      </div>
    </div>
    <div
      class="flex xs8"
    >
      <div
        class="layout gap-3"
      >
        <!---->
        <div
          class="flex xs6"
        >
          <pattern-operator-field-stub
            label=""
            name="rule.operator"
            operators=""
            required="true"
            value="equal"
          />
        </div>
        <div
          class="flex xs6"
        >
          <c-mixed-input-field-stub
            inputtype="string"
            label="Value"
            name="rule.value"
            required="true"
            types="[object Object],[object Object],[object Object],[object Object]"
            value="ruleValue"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <!---->
  </div>
</div>
`;

exports[`pattern-rule-field Renders \`pattern-rule-field\` with duration type 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="layout gap-3"
  >
    <div
      class="flex xs4"
    >
      <div
        class="layout gap-3"
      >
        <div
          class="flex"
        >
          <pattern-attribute-field-stub
            items=""
            label=""
            name="rule"
            required="true"
            returnobject="true"
            value="v.duration"
          />
        </div>
        <!---->
      </div>
    </div>
    <div
      class="flex xs8"
    >
      <div
        class="layout gap-3"
      >
        <!---->
        <div
          class="flex xs6"
        >
          <pattern-operator-field-stub
            label=""
            name="rule.operator"
            operators=""
            required="true"
            value="not_equal"
          />
        </div>
        <div
          class="flex xs6"
        >
          <c-duration-field-stub
            duration="[object Object]"
            name="rule.value"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <!---->
  </div>
</div>
`;

exports[`pattern-rule-field Renders \`pattern-rule-field\` with extra infos type 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="layout gap-3"
  >
    <div
      class="flex xs5"
    >
      <div
        class="layout gap-3"
      >
        <div
          class="flex xs4"
        >
          <pattern-attribute-field-stub
            items=""
            label=""
            name="rule"
            required="true"
            returnobject="true"
            value="extra"
          />
        </div>
        <div
          class="flex xs8"
        >
          <c-infos-attribute-field-stub
            items=""
            name="rule"
            row=""
            value="[object Object]"
          />
        </div>
      </div>
    </div>
    <div
      class="flex xs7"
    >
      <div
        class="layout gap-3"
      >
        <!---->
        <div
          class="flex xs4"
        >
          <pattern-operator-field-stub
            label=""
            name="rule.operator"
            operators=""
            required="true"
            value="equal"
          />
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <!---->
  </div>
</div>
`;

exports[`pattern-rule-field Renders \`pattern-rule-field\` with infos type and field is name 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="layout gap-3"
  >
    <div
      class="flex xs5"
    >
      <div
        class="layout gap-3"
      >
        <div
          class="flex xs4"
        >
          <pattern-attribute-field-stub
            items=""
            label=""
            name="rule"
            required="true"
            returnobject="true"
            value="v.infos"
          />
        </div>
        <div
          class="flex xs8"
        >
          <c-infos-attribute-field-stub
            combobox="true"
            items=""
            name="rule"
            row=""
            value="[object Object]"
          />
        </div>
      </div>
    </div>
    <div
      class="flex xs7"
    >
      <div
        class="layout gap-3"
      >
        <!---->
        <div
          class="flex xs4"
        >
          <pattern-operator-field-stub
            label=""
            name="rule.operator"
            operators=""
            required="true"
            value="equal"
          />
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <!---->
  </div>
</div>
`;

exports[`pattern-rule-field Renders \`pattern-rule-field\` with timestamp field type as date rule 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="layout gap-3"
  >
    <div
      class="flex xs4"
    >
      <div
        class="layout gap-3"
      >
        <div
          class="flex"
        >
          <pattern-attribute-field-stub
            items=""
            label=""
            name="rule"
            required="true"
            returnobject="true"
            value="v.display_name"
          />
        </div>
        <!---->
      </div>
    </div>
    <div
      class="flex xs8"
    >
      <div
        class="layout gap-3"
      >
        <!---->
        <div
          class="flex xs5"
        >
          <pattern-operator-field-stub
            label=""
            name="rule.operator"
            operators=""
            required="true"
            value="in_range_dates"
          />
        </div>
        <div
          class="flex xs7"
        >
          <pattern-rule-field-date-value-stub
            intervalranges="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
            name="rule.value"
            operator="in_range_dates"
            value="[object Object]"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <!---->
  </div>
</div>
`;
